# xingzhe

./: LICENSE  README.md  ui.xcf
devel/: .catkin  .rosinstall  _setup_util.py  setup.sh
devel/lib/pkgconfig/: arm.pc  body.pc  ear.pc  eye.pc  light.pc  wheel.pc  xingzhe.pc
firmware/: dts-build  mkpru.sh  pru.hp  pru0_pwm.p
launch/: xingzhe.launch
lib/systemd/system/: wpa_supplicant.service  wpa_supplicant.timer
msg/: sensor_imu.msg  usonic.msg
serv/: prupwm_duty.srv  prupwm_period.srv
src/: CMakeCache.txt  CMakeLists.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  pin.txt
src/arm/: CMakeLists.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  package.xml
src/arm/catkin_generated/: package.cmake  pkg.develspace.context.pc.py  pkg.installspace.context.pc.py
src/body/: CMakeLists.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake
src/body/catkin_generated/: body-msg-extras.cmake.installspace.in  package.cmake  pkg.develspace.context.pc.py  pkg.installspace.context.pc.py
src/body/cmake/: body-genmsg-context.py  body-genmsg.cmake
src/body/src/: MPU6050.cpp  MPU6050.h  body.cpp  body_node.cpp
src/body/src.bak/: MPU6050.cpp  body_node.cpp
src/catkin_generated/: generate_cached_setup.py  order_packages.cmake  order_packages.py  setup_cached.sh
src/catkin_generated/installspace/: .rosinstall  setup.sh
src/devel/: .catkin  .rosinstall  setup.sh
src/ear/: CMakeCache.txt  CMakeLists.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  package.xml
src/ear/catkin_generated/: generate_cached_setup.py  pkg.develspace.context.pc.py  pkg.installspace.context.pc.py  setup_cached.sh
src/ear/cmake/: ear-genmsg-context.py  ear-genmsg.cmake
src/ear/devel/: .catkin  .rosinstall  setup.sh
src/ear/gtest/: CTestTestfile.cmake  Makefile
src/ear/src/: ear.cpp  ear_node.cpp
src/eye/: CMakeCache.txt  CMakeLists.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  package.xml
src/eye/catkin_generated/: generate_cached_setup.py  package.cmake  pkg.develspace.context.pc.py  pkg.installspace.context.pc.py  setup_cached.sh
src/eye/devel/: .catkin  .rosinstall  setup.sh
src/eye/gtest/: CTestTestfile.cmake  Makefile
src/eye/src/: eye.cpp  eye_node.cpp  nodelets.cpp  stereo.cpp  stereo_node.cpp  uvc_cam.cpp
src/gpio/: gpio.cpp  gpio.h
src/gtest/: CTestTestfile.cmake  Makefile  cmake_install.cmake
src/i2c/: i2c_dev.cpp  i2c_func.cpp  i2c_func.h
src/libs/i2c/: i2c_dev.h  i2c_func.cpp  i2c_func.h
src/libs/prupwm/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  mkpru.sh  pru.cpp  pru.hp  prupwm.cpp  prupwm.h  prupwm_test.cpp  pwm.p
src/light/: CMakeLists.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake
src/monkey/: CMakeLists.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake
src/neck/: CMakeLists.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake
src/pru/: BONE-ROBOT-XINGZHE-00A0.dts  BONE-ROBOT-XINGZHE-00A0.dts.bak  RoboticsCape-00A0.dts  dts-build  startup.sh
src/prupwm/: CMakeLists.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  package.xml  pruPWM.cpp  pruPWM.h
src/r_base/: CMakeLists.txt  Makefile
src/r_base/src/: base.xpm  connect.xpm  disconnect.xpm  exit.xpm  gui.cpp  odometer.cpp  odometer.h  switch.cpp  switch.h
src/scripts/: BONE-ROBOT-XINGZHE-00A0.dts  RoboticsCape-00A0.dtbo  XINGZHE-00A0.dts  dts-build  hm_pru.hp  hm_pru0_code.p  interfaces  wpa_supplicant.conf
src/test/: Makefile  build_test.sh  pru.hp  pru0_test.p  test_pru.cpp
src/wheel/: CMakeLists.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  package.xml
src/xingzhe/: CMakeLists.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  package.xml
srv/: dc_motor.srv  position.srv  prupwm_duty.srv
(+136 files in other folders)
